<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="presenter"
            type="com.vkas.easyconnect.ecui.ecmain.MainActivity.EcClick" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#38000000"
        android:onClick="@{() ->presenter.clickMain()}">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:onClick="@{() ->presenter.clickMainMenu()}">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center_vertical|start"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.4">

                <TextView
                    android:id="@+id/tv_contact_us_pt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="12dp"
                    android:gravity="start|center_vertical"
                    android:onClick="@{() ->presenter.toContactUs()}"
                    android:paddingTop="25dp"
                    android:paddingBottom="25dp"
                    android:text="@string/contact_us"
                    android:textColor="#FFFFFFFF"
                    android:textSize="16sp"
                    app:drawableEndCompat="@drawable/ic_nav_back" />

                <TextView
                    android:id="@+id/tv_privacy_policy_pt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:drawableEndCompat="@drawable/ic_nav_back"                    android:drawablePadding="12dp"
                    android:gravity="start|center_vertical"
                    android:onClick="@{() ->presenter.toPrivacyPolicy()}"
                    android:paddingTop="25dp"
                    android:paddingBottom="25dp"
                    android:text="@string/privacy_policy"
                    android:textColor="#FFFFFFFF"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_share_pt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:drawableEndCompat="@drawable/ic_nav_back"                    android:drawablePadding="12dp"
                    android:gravity="start|center_vertical"
                    android:onClick="@{() ->presenter.toShare()}"
                    android:paddingTop="25dp"
                    android:paddingBottom="25dp"
                    android:text="@string/share"
                    android:textColor="#FFFFFFFF"
                    android:textSize="16sp"/>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>

